Dockerfile, docker-compose. Layout e style per main.html
È stato creato setup del container Docker e verificato il corretto funzionamento dell’ambiente. Sono stati inoltre realizzati il layout in HTML e lo stile CSS per la pagina main.

--- a/Sviluppo/View/page/main.html
+++ b/Sviluppo/View/page/main.html
@@ -12,19 +12,49 @@
 
 	<body>
 		<div class="header">
-            <div>FORMATION NETWORK</div>
-            <div>Account/Login</div>
-            <div>Creare Evento</div>
+			<span>Logo</span>
+            <span class="titolo">FORMATION NETWORK</span>
+            <span class="login"><button class="loginButton">LOGIN</button></span>
+			<span class="create"><button class="createButton">Creare evento</button></span>
 		</div>
 		<div class="layout">
-            <div class="search">Search:</div>
             <div class="searchInput"><Textarea></Textarea></div>
-            <div class="listTags">Tags:
-                
+            <div class="listTags">
+                <span><button class="tagButton">#IT</button></span>
+				<span><button class="tagButton">#CT</button></span>
+				<span><button class="tagButton">#DT</button></span>
+				<span><button class="tagButton">#IT</button></span>
+				<span><button class="tagButton">#CT</button></span>
+				<span><button class="tagButton">#DT</button></span>
+				<span><button class="tagButton">#IT</button></span>
+				<span><button class="tagButton">#CT</button></span>
+				<span><button class="tagButton">#DT</button></span>
+				<span><button class="tagButton">#IT</button></span>
+				<span><button class="tagButton">#CT</button></span>
+				<span><button class="tagButton">#DT</button></span>
+				<span><button class="tagButton">#IT</button></span>
+				<span><button class="tagButton">#CT</button></span>
+				<span><button class="tagButton">#DT</button></span>	
             </div>
             
-            <div class="listEvents">Eventi:
-                <!--Event-->
+            <div class="listEvents">
+                <div class="event">
+					<div class="eventName">Evento nome:</div>
+					<div class="eventDescription">ply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuri</div>
+					<div class="eventDate">Data: xx/xx/2025</div>
+					<div class="eventNumberMax">Posti rimasti: 55/200</div>
+					<div class="eventFooter">
+						<span class="eventTagsZone">
+							<span class="eventTagsZoneText">Tags:</span>
+							<span class="eventTagsZoneTag">#IT</span>
+							<span class="eventTagsZoneTag">#IT#IT</span>
+							<span class="eventTagsZoneTag">#IT#IT#IT</span>
+							<span class="eventTagsZoneTag">#IT#IT</span>
+							<span class="eventTagsZoneTag">#IT#IT#IT</span>
+						</span>
+						<span class="eventPrenote"><button class="eventPrenoteButton">Prenotare</button></span>
+					</div>
+				</div>
             </div>
 
 		</div>	
