Layout per le pagine
html+css per pagine: main, login, regisrtazione, creare evento

--- a/Sviluppo/View/page/creareEvento.html
+++ b/Sviluppo/View/page/creareEvento.html
@@ -4,7 +4,7 @@
 
 	<head>
 		
-		<title>CreareEvento</title>
+		<title>Login</title>
 		<link rel="stylesheet" href="../style/style.css" />
 		
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
@@ -12,25 +12,36 @@
 
 	<body>
 		<div class="header">
-            <div>FORMATION NETWORK</div>
-            <div>Account/Login</div>
+			<span><img src="../style/img/grok-seeklogo.png" alt="Logo" class="logoImg"></span>
+            <a class="titolo" href="./main.html">FORMATION NETWORK</a>
 		</div>
 		<div class="layout">
-            <div class="titolo">Creare evento</div>
+                  <div class="createEventText">Creare evento</div>
+		      
+                  <div class="accountName">
+            	      <span class="accountNameText">Evento di nome:</span>
+            	      <span class="accountNameInput"><Textarea></Textarea></span>
+                  </div>
 
-            <div class="eventoName">Evento di nome:</div>
-            <div class="eventoNameInput"><Textarea></Textarea></div>
-            
-            <div class="eventoData">Data:</div>
-            <div class="eventoDataInput"><Textarea></Textarea></div>
+			<div class="accountPassword">
+            	      <span class="accountPasswordText">Data:</span>
+            	      <span class="accountPasswordInput"><Textarea></Textarea></span>
+			</div>
 
-            <div class="eventoPosti">Numero di posti:</div>
-            <div class="eventoPostiInput"><Textarea></Textarea></div>
+			<div class="accountPassword">
+            	      <span class="accountPasswordText">Numero di posti:</span>
+            	      <span class="accountPasswordInput"><Textarea></Textarea></span>
+			</div>
 
-            <div class="eventoDescrizione">Descrizione:</div>
-            <div class="eventoDescrizioneInput"><Textarea></Textarea></div>
+                  <div class="accountPassword">
+            	      <span class="accountPasswordText">Descrizione:</span>
+            	      <span class="accountPasswordInput"><Textarea></Textarea></span>
+			</div>
 
-            <div class="buttonCreare">Creare</div>
-		</div>	
+
+
+
+            <div class="loginButtonLog">Crea</div>
+
 	</body>
 </html>
