--- a/Sviluppo/View/page/login.html
+++ b/Sviluppo/View/page/login.html
@@ -12,19 +12,24 @@
 
 	<body>
 		<div class="header">
-            <div>FORMATION NETWORK</div>
-            <div>Account/Login</div>
+			<span><img src="../style/img/grok-seeklogo.png" alt="Logo" class="logoImg"></span>
+            <a class="titolo" href="./main.html">FORMATION NETWORK</a>
 		</div>
 		<div class="layout">
-            <div class="accountName">Utente:</div>
-            <div class="accountNameInput"><Textarea></Textarea></div>
-            
-            <div class="accountPassword">Password:</div>
-            <div class="accountPasswordInput"><Textarea></Textarea></div>
+			<div class="accountName">
+            	<span class="accountNameText">Utente:</span>
+            	<span class="accountNameInput"><Textarea></Textarea></span>
+            </div>
 
-            <div class="buttonLogin">Login</div>
+			<div class="accountPassword">
+            	<span class="accountPasswordText">Password:</span>
+            	<span class="accountPasswordInput"><Textarea></Textarea></span>
+			</div>
+            <div class="loginButtonLog">Login</div>
 
-            <div class="buttonRegistration">Regisrtazione</div>
+			<hr class="line">
+			
+            <div><a href="./registrazione.html" class="loginButtonReg">Regisrtazione</a></div>
 		</div>	
 	</body>
 </html>
