--- a/Sviluppo/View/page/main.html
+++ b/Sviluppo/View/page/main.html
@@ -12,45 +12,37 @@
 
 	<body>
 		<div class="header">
-			<span>Logo</span>
-            <span class="titolo">FORMATION NETWORK</span>
-            <span class="login"><button class="loginButton">LOGIN</button></span>
-			<span class="create"><button class="createButton">Creare evento</button></span>
+			<span><img src="../style/img/grok-seeklogo.png" alt="Logo" class="logoImg"></span>
+            <a class="titolo" href="./main.html">FORMATION NETWORK</a>
+            <a class="login" href="./login.html"><button class="loginButton" >LOGIN</button></a>
+			<span class="create"><button class="createButton"><a href="./creareEvento.html" class="createButtonLink">Creare evento</a></button></span>
 		</div>
 		<div class="layout">
             <div class="searchInput"><Textarea></Textarea></div>
             <div class="listTags">
-                <span><button class="tagButton">#IT</button></span>
-				<span><button class="tagButton">#CT</button></span>
-				<span><button class="tagButton">#DT</button></span>
+                <span><button class="tagButton">#UNIPR</button></span>
+				<span><button class="tagButton">#CHIMICA</button></span>
+				<span><button class="tagButton">#FISICA</button></span>
+				<span><button class="tagButton">#Giurisprudenza</button></span>
+				<span><button class="tagButton">#Medicina</button></span>
+				<span><button class="tagButton">#Ingegneria</button></span>
+				<span><button class="tagButton">#INGEGNERIA</button></span>
+				<span><button class="tagButton">#Farmaco</button></span>
 				<span><button class="tagButton">#IT</button></span>
-				<span><button class="tagButton">#CT</button></span>
-				<span><button class="tagButton">#DT</button></span>
-				<span><button class="tagButton">#IT</button></span>
-				<span><button class="tagButton">#CT</button></span>
-				<span><button class="tagButton">#DT</button></span>
-				<span><button class="tagButton">#IT</button></span>
-				<span><button class="tagButton">#CT</button></span>
-				<span><button class="tagButton">#DT</button></span>
-				<span><button class="tagButton">#IT</button></span>
-				<span><button class="tagButton">#CT</button></span>
-				<span><button class="tagButton">#DT</button></span>	
             </div>
             
             <div class="listEvents">
                 <div class="event">
 					<div class="eventName">Evento nome:</div>
-					<div class="eventDescription">ply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuri</div>
+					<div class="eventDescription">Descrizione: ply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuri</div>
 					<div class="eventDate">Data: xx/xx/2025</div>
 					<div class="eventNumberMax">Posti rimasti: 55/200</div>
 					<div class="eventFooter">
 						<span class="eventTagsZone">
 							<span class="eventTagsZoneText">Tags:</span>
 							<span class="eventTagsZoneTag">#IT</span>
-							<span class="eventTagsZoneTag">#IT#IT</span>
-							<span class="eventTagsZoneTag">#IT#IT#IT</span>
-							<span class="eventTagsZoneTag">#IT#IT</span>
-							<span class="eventTagsZoneTag">#IT#IT#IT</span>
+							<span class="eventTagsZoneTag">#INGEGNERIA</span>
+							<span class="eventTagsZoneTag">#UNIPR</span>
 						</span>
 						<span class="eventPrenote"><button class="eventPrenoteButton">Prenotare</button></span>
 					</div>
