--- a/Sviluppo/View/page/registrazione.html
+++ b/Sviluppo/View/page/registrazione.html
@@ -12,26 +12,36 @@
 
 	<body>
 		<div class="header">
-            <div>FORMATION NETWORK</div>
-            <div>Account/Login</div>
+			<span><img src="../style/img/grok-seeklogo.png" alt="Logo" class="logoImg"></span>
+            <a class="titolo" href="./main.html">FORMATION NETWORK</a>
 		</div>
+
 		<div class="layout">
-            <div class="accountName">Utente:</div>
-            <div class="accountNameInput"><Textarea></Textarea></div>
-            
-            <div class="accountPassword">Password:</div>
-            <div class="accountPasswordInput"><Textarea></Textarea></div>
-
-            <div class="accountRole">Ruolo/Professore</div>
-            <div class="accountRoleButtons">
-                <div class="accountRoleButtonSchool"></div>
-                <div class="accountRoleButtonUniversity"></div>
+		
+            <div class="accountName">
+            	<span class="accountNameText">Utente:</span>
+            	<span class="accountNameInput"><Textarea></Textarea></span>
             </div>
+		
+            <div class="accountPassword">
+            	<span class="accountPasswordText">Password:</span>
+            	<span class="accountPasswordInput"><Textarea></Textarea></span>
+		</div>
 
-            <div class="accountEmail">email:</div>
-            <div class="accountEmailInput"><Textarea></Textarea></div>
+		<div class="accountRole">
+            	<span class="accountRoleText">Role:</span>
+            	<span class="accountRoleInput">
+                        <span><button class="accountRoleSco">Scolastico</button></span>
+                        <span><button class="accountRoleUni">Universitario</button></span>
+                  </span>
+		</div>
+            
+		<div class="accountEmail">
+            	<span class="accountEmailText">email:</span>
+            	<span class="accountEmailInput"><Textarea></Textarea></span>
+		</div>
 
-            <div class="buttonCreateAccount">Creare account</div>
-		</div>	
+            <div class="loginButtonCreate">Creare account</div>
+	
 	</body>
 </html>
