--- a/Sviluppo/View/page/login.html
+++ b/Sviluppo/View/page/login.html
@@ -18,12 +18,12 @@
 		<div class="layout">
 			<div class="accountName">
             	<span class="accountNameText">Utente:</span>
-            	<span class="accountNameInput"><Textarea></Textarea></span>
+            	<span class="accountNameInput"><input></span>
             </div>
 
 			<div class="accountPassword">
             	<span class="accountPasswordText">Password:</span>
-            	<span class="accountPasswordInput"><Textarea></Textarea></span>
+            	<span class="accountPasswordInput"><input></span>
 			</div>
             <div class="loginButtonLog">Login</div>
 
