--- a/Sviluppo/View/page/main.html
+++ b/Sviluppo/View/page/main.html
@@ -18,7 +18,7 @@
 			<span class="create"><button class="createButton"><a href="./creareEvento.html" class="createButtonLink">Creare evento</a></button></span>
 		</div>
 		<div class="layout">
-            <div class="searchInput"><Textarea></Textarea></div>
+            <div class="searchInput"><input></div>
             <div class="listTags">
                 <span><button class="tagButton">#UNIPR</button></span>
 				<span><button class="tagButton">#CHIMICA</button></span>
@@ -44,7 +44,7 @@
 							<span class="eventTagsZoneTag">#INGEGNERIA</span>
 							<span class="eventTagsZoneTag">#UNIPR</span>
 						</span>
-						<span class="eventPrenote"><button class="eventPrenoteButton">Prenotare</button></span>
+						<span class="eventPrenote"><button class="eventPrenoteButton"><a href="./richiesta.html">Prenotare</a></button></span>
 					</div>
 				</div>
             </div>
