--- a/Sviluppo/View/page/registrazione.html
+++ b/Sviluppo/View/page/registrazione.html
@@ -20,12 +20,12 @@
 		
             <div class="accountName">
             	<span class="accountNameText">Utente:</span>
-            	<span class="accountNameInput"><Textarea></Textarea></span>
+            	<span class="accountNameInput"><input></span>
             </div>
 		
             <div class="accountPassword">
             	<span class="accountPasswordText">Password:</span>
-            	<span class="accountPasswordInput"><Textarea></Textarea></span>
+            	<span class="accountPasswordInput"><input></span>
 		</div>
 
 		<div class="accountRole">
@@ -38,7 +38,7 @@
             
 		<div class="accountEmail">
             	<span class="accountEmailText">email:</span>
-            	<span class="accountEmailInput"><Textarea></Textarea></span>
+            	<span class="accountEmailInput"><input></span>
 		</div>
 
             <div class="loginButtonCreate">Creare account</div>
