--- a/Sviluppo/View/style/style.css
+++ b/Sviluppo/View/style/style.css
@@ -71,6 +71,17 @@ input{
     color: blue;
 
 }
+
+.radio{
+    width: 70px;
+    height: 25px;
+    border-radius: 10em;
+    text-align: center;
+    font-size: 20px;
+    color: blue;
+    margin-left: 40px;
+
+}
 .listTags{
     margin: auto;
     margin-top: 20px;
